--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The backend for a nutrition app",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
