--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The backend for a nutrition app",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "NODE_ENV=development nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/edevars/nutrition-watcher-backend#readme",
   "dependencies": {
     "apollo-server": "^2.16.0",
-    "graphql": "^15.3.0"
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
