--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
     "eslint": "^7.5.0",
     "nodemon": "^2.0.4"
   }
