--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "apollo-server": "^2.16.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
-    "mysql": "^2.18.1"
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
