--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "homepage": "https://github.com/edevars/nutrition-watcher-backend#readme",
   "dependencies": {
     "apollo-server": "^2.16.0",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
